# picture

./: .gitignore  Cargo.toml
crates/aml-picture/: .gitignore  Cargo.toml  app-name-manifest.rc  build.rs
crates/aml-picture/src/: error.rs  lib.rs  main.rs
crates/aml-picture/src/handle/: anime.rs  leg.rs  mod.rs  photo.rs  pixiv.rs
crates/aml-picture/src/picture/: anime.rs  leg.rs  mod.rs  photo.rs  pixiv.rs
crates/aml-picture/src/utils/: local.rs  ssh.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/core/src/anime/: entity.rs
crates/core/src/leg/: entity.rs
crates/core/src/photo/: entity.rs
crates/core/src/pixiv/: entity.rs
crates/pixiv-lolicon-spider/: .gitignore  Cargo.toml
crates/pixiv-lolicon-spider/src/: entity.rs  lib.rs  main.rs
crates/pixiv-lolicon-spider/src/utils/: delete_empty_json.rs  generate_bin_from_json.rs  merge_pixiv_to_json.rs  mod.rs  modify_name.rs  modify_valid_field_from_bad_picture.rs  unique_json.rs
react-app/: package-lock.json  package.json
react-app/src/: App.js
