[package]
name = "aml-picture"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
picture-core = { path = "../core"  }
rust-embed = "6"
anyhow = "1.0.71"
bytes = "1.4.0"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.28.2", features = ["full"] }
serde_json = "1"
reqwest = { version = "0.11.18", features = ["blocking"] }
lazy_static = "1.4.0"
rand = "0.8.5"
salvo = { version = "0.46.0", features = ["serve-static","anyhow"] }
async-trait = "0.1.71"
#async_once = "0.2.6"
once_cell = "1.8.0"
thiserror = "1.0.43"
bincode = "1.3.3"
async-recursion = "1"
ssh2 = "0.9.4"
tracing = "0"
#time = "0"
#tracing-subscriber = {version = "0",features = ["time","local-time"]}
chrono = "0"
sysinfo = "0.29.8"

[target.'cfg(windows)'.build-dependencies]
embed-resource = "*"


[target.aarch64-unknown-linux-gnu.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
[target.aarch64-unknown-linux-musl.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[target.x86_64-unknown-linux-gnu.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
[target.x86_64-unknown-linux-musl.dependencies]
openssl = { version = "0.10", features = ["vendored"] }


