[package]
name = "picture-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
time = "0"
tracing = "0"
tracing-subscriber = {version = "0",features = ["time","local-time"]}
