[package]
name = "pixiv-lolicon-spider"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
picture-core = { path = "../core" }
anyhow = "1.0.71"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.28.2", features = ["full"] }
serde_json = "1"
reqwest = { version = "0.11.18", features = ["json"] }
lazy_static = "1.4.0"
chrono = "0.4.26"
bincode = "1.3.3"
tracing = "0"
#time = "0"
#tracing-subscriber = {version = "0",features = ["time","local-time"]}
regex = "1"



[target.aarch64-unknown-linux-gnu.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
[target.aarch64-unknown-linux-musl.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
# arm-unknown-linux-gnueabihf
[target.arm-unknown-linux-gnueabihf.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[target.x86_64-unknown-linux-gnu.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
[target.x86_64-unknown-linux-musl.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[target.'cfg(all(target_env = "musl", target_pointer_width = "64"))'.dependencies]
tikv-jemallocator ={workspace = true}